# padhlo

./: .env  graph.py
Agents/padhlo/: README.md  pyproject.toml
Agents/padhlo/src/padhlo/: crew.py  main.py
Backend/: main.py
Backend/app/auth/: auth.py  social_auth.py
Backend/app/core/: database.py  init_db.py
Backend/app/models/: user.py
Backend/app/routes/: user.py
padhlo/: pyvenv.cfg
padhlo/Scripts/: activate  activate.bat
phi/Scripts/: activate  activate.bat
