[project]
name = "padhlo"
version = "0.1.0"
description = "padhlo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
padhlo = "padhlo.main:run"
run_crew = "padhlo.main:run"
train = "padhlo.main:train"
replay = "padhlo.main:replay"
test = "padhlo.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
